# ChessApp-relaunch

./: .dockerignore  .env  .env.example  .env.selfplay  .gitignore  .markdownlinkcheck.json  .markdownlint-cli2.jsonc  .markdownlint.jsonc  Makefile  Makefile.docs  Makefile.obs  Makefile.selfplay  Makefile.serve  README.md  SUMMARY_FOR_PL_A2_2025-08-30.md  SUMMARY_FOR_PL_B1_2025-08-30.md  acceptance_report.txt  metrics.json  package.json  pyproject.toml  pytest.ini  smoke_chessapp.sh
api/: .env.example  Dockerfile.dev  README.md  pom.xml
codex-context/: API_SURFACE.md  CONVENTIONS.md  DB_SCHEMA_SNAPSHOT.md  MODULE_SUMMARY.md  OBSERVABILITY.md  README.md  REPO_MAP.md  SMOKE_REPORT.md  TESTING.md  openapi.json
data/: m2.parquet
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  CODEX-SETUP.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  ENDPOINT_STABILITY_POLICY.md  FAQ_GLOSSARY.md  GETTING_STARTED.md  OBSERVABILITY.md  OBSERVABILITY_PROXY.md  PROJECT_INFORMATION_v0.1.md  PROJECT_OVERVIEW.md  PR_SUMMARY.md  RELEASES_AND_ENVIRONMENTS.md  REPORT_DUPLICATES.md  ROADMAP.md  RUNBOOKS.md  RUNBOOK_LOCAL_SMOKE.md  SECURITY_GUIDE.md  SERVE.md  STATE.md  USER_FLOWS.md  contributors-legacy.md  offline-ingest.md
frontend/: .env.codex  .env.development  .env.example  Dockerfile  index.html  nginx.conf  (+4 more)
ml/eval-offline/: Dockerfile  eval.py  pyproject.toml
ml/eval-offline/app/: __init__.py  evaluator.py  main.py  metrics.py  schemas.py
ml/selfplay-runner/: Dockerfile  pyproject.toml
ml/selfplay-runner/app/: elo.py  main.py  metrics.py  runner.py  schemas.py  serve_client.py  storage.py
(+674 files in other folders)
