[project]
name = "eval-offline"
version = "0.1.0"
description = "Offline evaluation service"
authors = [{name = "ChessApp Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus_client",
    "pydantic",
    "mlflow",
    "pandas",
    "pyarrow",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
torch = ["torch"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
